tests/correctness/src/miniboxing/tests/compile/mb_override_7.check
newSource1.scala:9: error: The method overrideMe in class Base72 overrides method overrideMe in class Base71 therefore needs to have the follwing type parameters marked with @minispec: type B.
  override def overrideMe[@minispec A, B](a: A, b: B): A = ???
               ^
[Now checking: minibox]